tests/invalid/ho_default_func_3.err_exp2
ho_default_func_3.m:034: In clause for `baz(in, out)':
ho_default_func_3.m:034:   mode error in conjunction. The next 2 error messages
ho_default_func_3.m:034:   indicate possible causes of this error.
ho_default_func_3.m:034:   In clause for `baz(in, out)':
ho_default_func_3.m:034:   in call to function `univ.univ'/1:
ho_default_func_3.m:034:   mode error: arguments `TypeInfo_9, V_7, V_6' have
ho_default_func_3.m:034:   the following insts:
ho_default_func_3.m:034:     bound(private_builtin.type_info(bound(<type_ctor_info
ho_default_func_3.m:034:     for .func/0>), bound(2), bound(<type_ctor_info for
ho_default_func_3.m:034:     .int/0>), bound(<type_ctor_info for .int/0>))),
ho_default_func_3.m:034:     /* unique */(func((unique >> clobbered)) = (free
ho_default_func_3.m:034:     >> unique) is det),
ho_default_func_3.m:034:     free
ho_default_func_3.m:034:   which does not match any of the modes for function
ho_default_func_3.m:034:   `univ.univ'/1.
ho_default_func_3.m:034:   In clause for `baz(in, out)':
ho_default_func_3.m:034:   in call to predicate `univ.univ_to_type'/2:
ho_default_func_3.m:034:   mode error: arguments `TypeInfo_for_T, V_6, Y0' have
ho_default_func_3.m:034:   the following insts:
ho_default_func_3.m:034:     ground,
ho_default_func_3.m:034:     free,
ho_default_func_3.m:034:     free
ho_default_func_3.m:034:   which does not match any of the modes for predicate
ho_default_func_3.m:034:   `univ.univ_to_type'/2.
